<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/lavender"
        android:layout_centerInParent="true"
        android:textSize="36sp" />
     !-->

    <ImageView
        android:id="@+id/icono_persona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_24"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp" />

    <TextView
        android:id="@+id/dyel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dyel"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />


    <ImageView
        android:id="@+id/user_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20sp"
        android:src="@drawable/user_pic"
        android:layout_below="@id/dyel_title"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alumne"
        android:textSize="24sp"
        android:textColor="@android:color/primary_text_dark"
        android:layout_below="@id/user_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:text="Email"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/postsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_dark"
        android:layout_below="@+id/logout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/followersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Followers"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_dark"
        android:layout_below="@id/logout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/followingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Following"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_dark"
        android:layout_below="@id/logout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp" />


    <Button
        android:text="@string/logout"
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DIET"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button2"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WORKOUTS"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:layout_above="@id/button3"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PROGRESS"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:layout_above="@id/bottomNavigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="20dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>